# sauve-qui-peut-projet

./: README.md
SQP-client/: Cargo.toml
SQP-client/src/: decoder.rs  error.rs  logger.rs  main.rs  models.rs  player.rs  request_models.rs  server_utils.rs
SQP-common/: Cargo.toml
SQP-common/src/: lib.rs  logger.rs
SQP-server/: Cargo.toml
SQP-server/src/: encoder.rs  main.rs  maze_generator.rs  server_request_models.rs  tests.rs
