[package]
name = "sqp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sqp-server"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.10"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = "0.4"
SQP-common = { path = "../SQP-common" }
